@@ -3,6 +3,7 @@
   environments with shared libraries. See STATIC_PKG_LIST in settings.sh.
 * Add USE_JPEG_TURBO variable to all configs: set it to "true" for using of
   libjpeg-turbo library instead of jpeg library.
+* Add update-checksums-database.sh tool.
 * Update in all configs:
   - QT5_VER from 5.10.0 to 5.10.1 (except AstraLinux 1.2)
 
